tests/fail/unparsable_option.stderr
error: expected `,`
 --> $DIR/unparsable_option.rs:6:14
  |
6 | #[impl_op(not-an-identifier)]
  |              ^
